Extract PowerPoint diagram text and connections for RAG